--- a/Sicsoft.Checkin.Web/Pages/Shared/_NavbarPartial.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Shared/_NavbarPartial.cshtml
@@ -374,7 +374,34 @@
 
 
                     }
+                    @{
+                        if (!string.IsNullOrEmpty(Roles.Where(a => a == "67").FirstOrDefault()))
+                        {
+                            <li class="nav-item ">
+                                <a class="nav-link active" href="#" data-toggle="collapse" aria-expanded="false" data-target="#submenu-8" aria-controls="submenu-8"><i class="fas fa-clipboard-list"></i>Soportes <span class="badge badge-success">8</span></a>
+                                <div id="submenu-8" class="collapse submenu" style="">
+                                    <ul class="nav flex-column">
 
+
+                                        <li class="nav-item">
+                                            @{
+                                                if (!string.IsNullOrEmpty(Roles.Where(a => a == "67").FirstOrDefault()))
+                                                {
+
+                                                    <a class="nav-link" asp-page="/Soportes/Index">Soporte</a>
+                                                }
+
+                                            }
+
+                                        </li>
+
+                                    </ul>
+                                </div>
+                            </li>
+                        }
+
+
+                    }
 
                 </ul>
             </div>
